# AuraHQ

./: .env.example  .gitignore  Justfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  theme-options.html  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(auth)/: layout.tsx
app/onboarding/: page.tsx
backend/: auth.py  config.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: agents.py  avatar.py  connect.py  memory.py  profile.py
backend/services/: agent_prompts.py  openai_service.py  supabase_service.py
backend/tools/: executor.py  gmail.py  registry.py
components/creation/: AgentCreationFlow.tsx
components/hq/: AgentMiniChat.tsx  AgentSignature.tsx  HQView.tsx
components/onboarding/: AvatarCeremony.tsx  SubscriptionOffer.tsx
components/settings/: ConnectionsView.tsx
components/workspace/: AgentSettingsView.tsx  AgentWorkspace.tsx
docs/brief/: 09-design-brief copy.md  10-design-brief-v2.md  11-executive-summary.md  12-requirements-and-risks.md
docs/design/: 05-art-direction.md  06-sharpened-art-direction.md
docs/experience/: 07-app-experience.md  08-refined-app-experience.md
docs/product/: 03-product-blueprint.md  04-tightened-product-system.md  13-agent-catalog.md  14-agent-catalog-v2.md
docs/review/: 15-critical-review.md  16-final-direction.md
docs/strategy/: 01-concept-development.md  02-refined-concept.md
lib/: openai.ts  utils.ts
lib/agents/: artifact-update.ts  definitions.ts  (+4 more)
scripts/: push.sh
types/: index.ts
(+14 files in other folders)
